# wasm-serverless-cpp-sdk

./: CMakeLists.txt  LICENSE  README.md
include/: api.hpp  init.hpp  model.hpp
src/: api.cpp  init.cpp
